apps/memegen/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: memegen
  name: memegen
