apps/memegen/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: memegen
  name: memegen
spec:
  progressDeadlineSeconds: 30
  replicas: 2
  selector:
    matchLabels:
      run: memegen
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: memegen
    spec:
      containers:
      - image: docker.io/danielmanners/memegen:v9.3
        imagePullPolicy: Always
        name: memegen
        resources:
          limits:
            cpu: "1"
            memory: 160Mi
          requests:
            cpu: 500m
            memory: 96Mi
        ports:
        - containerPort: 5000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      #   beta.kubernetes.io/arch: arm
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 3
