apps/memegen/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memegen
  labels:
    run: memegen
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: memegen
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: memegen-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: memegen.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  selector:
    run: memegen
  sessionAffinity: None
